lisätty tiedot Seinäjoen kaupunkioikeuksista ja kuntaliitoksista

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,9 +16,10 @@
             <input type="number" name="year" id="year" required min="1960" max="2022">
             <button type="submit">Hae</button>
         </form>
-    {% if result_t %}
+    {% if result_t1 %}
         <h3>{{ result_d }}</h3>
-        <p>{{ result_t }}</p>
+        <p>{{ result_t1 }}</p>
+        <p>{{ result_t2 }}</p>
     {% endif %}
 
 </body>
